--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "name_meaning-",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.mjs"
+    "start": "node index.mjs"
   },
   "repository": {
     "type": "git",
