--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://CRUD:hamzaali565@cluster0.kh990zg.mongodb.net/discountStore?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://CRUD:hamzaali565@cluster0.kh990zg.mongodb.net/nameData?retryWrites=true&w=majority
